--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 
 buildscript {
     ext.kotlin_version = '1.2.30'
+    ext.lifecycle_version = '2.0.0-alpha1'
+
     repositories {
         google()
         jcenter()
