--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,28 +21,29 @@ android {
     }
 }
 
-ext.arch_version = "1.1.1"
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
     // support lib
-    implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
-    implementation 'com.android.support:design:28.0.0-alpha3'
+    implementation "com.android.support:appcompat-v7:$support_lib_version"
+    implementation "com.android.support:design:$support_lib_version"
 
-    //retrofit/ okhttp
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    //retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+
+    //okhttp
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
 
     //gson
     implementation 'com.google.code.gson:gson:2.8.2'
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 
     //rxjava
-    implementation 'io.reactivex.rxjava2:rxjava:2.0.2'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
 
     // architecture components
     implementation "android.arch.lifecycle:runtime:$arch_version"
@@ -50,6 +51,9 @@ dependencies {
     implementation "android.arch.lifecycle:reactivestreams:$arch_version"
     implementation "android.arch.lifecycle:livedata:$arch_version"
     kapt "android.arch.lifecycle:compiler:$arch_version"
+    implementation "android.arch.persistence.room:runtime:$arch_version"
+    kapt "android.arch.persistence.room:compiler:$arch_version"
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
