--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,10 @@
 
 buildscript {
     ext.kotlin_version = '1.2.30'
-    ext.lifecycle_version = '2.0.0-alpha1'
+    ext.arch_version = "1.1.1"
+    ext.support_lib_version = "28.0.0-alpha3"
+    ext.retrofit_version = "2.4.0"
+    ext.rxjava_version = "2.1.16"
 
     repositories {
         google()
